--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,28 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 #header-title {
+    margin-top: 1em;
+    color : rgb(216, 214, 214);
+    font-weight: 500;
+}
+
+#container {
+    width: 640px;
+    height: 640px;
+    background-color : lightpink;
     display: flex;
     justify-content: center;
-    margin-top: 1em;
-    color : white;
-    font-weight: 500;
+}
+
+.box {
+    border: 1px solid white;
+    width: 20px;
+    height: 20px;
 }
