--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
 #input-entry-field {
     display: flex;
     justify-content: center;
+    margin-bottom : 1em;
 }
 
 #input {
@@ -65,7 +66,6 @@ body {
 }
 
 .box {
-    border: 1px solid white;
     display:flex;
     justify-content: center;
     align-items: center;
